[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://level/dirt.png" type="Texture" id=2]
[ext_resource path="res://main/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://gui/theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.5, 0.5, 0.5, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.599
margin_top = -191.599
margin_right = -12.5991
margin_bottom = -12.5992
custom_fonts/font = SubResource( 1 )
text = "v.3"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 88.0
margin_top = 182.0
margin_right = 488.0
margin_bottom = 841.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "Into The
Depths"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 400.0
margin_bottom = 259.0
rect_min_size = Vector2( 0, 50 )

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 400.0
margin_bottom = 359.0
text = "Play"

[node name="FullScreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 400.0
margin_bottom = 459.0
text = "Full Screen (F11)"

[node name="Reset" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 489.0
margin_right = 400.0
margin_bottom = 559.0
text = "Reset Save"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 589.0
margin_right = 400.0
margin_bottom = 659.0
text = "Quit"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Play" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/FullScreen" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Reset" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
